Add Finance Assistant project

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                 </article>
             </a>
 
-            <a href="#" class="calculator">
+            <a href="https://jacobryanhanson.github.io/finance-assistant/" class="finance-assistant">
                 <article>
                     <div class="container-text">
-                        <h3>Calculator</h3>
-                        <p>HTML/CSS/JavaScript</p>
+                        <h3>Finance Assistant</h3>
+                        <p>HTML/CSS/SCSS/JavaScript</p>
                     </div>
                 </article>
             </a>
