--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                 </article>
             </a>
 
-            <a href="#" class="clock">
+            <a href="https://github.com/alexm1937/gameSpotBlog" class="game-spot-blog">
                 <article>
                     <div class="container-text">
-                        <h3>Clock</h3>
-                        <p>HTML/CSS/JavaScript</p>
+                        <h3>Game Spot Blog</h3>
+                        <p>HTML/CSS/JavaScript/mySQL</p>
                     </div>
                 </article>
             </a>
