Update deployed url

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </article>
             </a>
 
-            <a href="https://github.com/alexm1937/gameSpotBlog" class="game-spot-blog">
+            <a href="https://tranquil-tor-89831.herokuapp.com/" class="game-spot-blog">
                 <article>
                     <div class="container-text">
                         <h3>Game Spot Blog</h3>
