Add MERN project - The Raffler

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                 </article>
             </a>
 
-            <a href="#" class="calender">
+            <a href="https://guarded-brushlands-70829.herokuapp.com/" class="the-raffler">
                 <article>
                     <div class="container-text">
-                        <h3>Calender</h3>
-                        <p>HTML/CSS/JavaScript</p>
+                        <h3>The Raffler</h3>
+                        <p>MERN</p>
                     </div>
                 </article>
             </a>
