Add Deep Thoughts

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </article>
             </a>
 
-            <a href="https://tranquil-tor-89831.herokuapp.com/" class="game-spot-blog">
+            <a href="https://game-spot-blog-32423.herokuapp.com/" class="game-spot-blog">
                 <article>
                     <div class="container-text">
                         <h3>Game Spot Blog</h3>
@@ -85,10 +85,10 @@
                 </article>
             </a>
 
-            <a href="https://guarded-brushlands-70829.herokuapp.com/" class="the-raffler">
+            <a href="https://deep-thoughts-54736.herokuapp.com/" class="deep-thoughts">
                 <article>
                     <div class="container-text">
-                        <h3>The Raffler</h3>
+                        <h3>Deep Thoughts</h3>
                         <p>MERN</p>
                     </div>
                 </article>
